<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/layout_padding">

    <TextView
            style="@style/Traein.DrawerLabel"
            android:text="@string/station"
            android:layout_marginBottom="20dp"/>

    <include layout="@layout/favorite"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:enabled="false"
            android:id="@+id/index_action"/>

    <TextView
            android:layout_marginTop="15dp"
            style="@style/Traein.DrawerLabel"
            android:text="@string/favorites"/>

    <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/index_favorites"
            android:layout_gravity="right|center_vertical"/>
</LinearLayout>